force-app/main/default/objects/Extole_Event_Config__mdt/Extole_Event_Config__mdt.object-meta.xml
<CustomObject>
    <label>Extole Event Config</label>
    <pluralLabel>Extole Event Configs</pluralLabel>
</CustomObject>