force-app/main/default/objects/Extole_Event_Config__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <label>Apex Class Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>