force-app/main/default/objects/Extole_Event_Config__mdt/fields/Config_Version__c.field-meta.xml
<CustomField>
    <fullName>Config_Version__c</fullName>
    <label>Config Version</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>