force-app/main/default/objects/Extole_Event_Config__mdt/fields/Deployed_By_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployed_By_User_Id__c</fullName>
    <label>Deployed By User Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>