force-app/main/default/objects/Extole_Event_Config__mdt/fields/Last_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Last_Deployed__c</fullName>
    <label>Last Deployed</label>
    <type>DateTime</type>
</CustomField>