force-app/main/default/objects/Extole_Event_Config__mdt/fields/Last_Failed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Failed_At__c</fullName>
    <label>Last Failed At</label>
    <type>DateTime</type>
</CustomField>