force-app/main/default/objects/Extole_Event_Config__mdt/fields/Last_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Record_Id__c</fullName>
    <label>Last Record Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>