force-app/main/default/objects/Extole_Event_Config__mdt/fields/Last_Response_Summary__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Summary__c</fullName>
    <label>Last Response Summary</label>
    <type>Text</type>
    <length>255</length>
</CustomField>