force-app/main/default/objects/Extole_Event_Config__mdt/fields/Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Field__c</fullName>
    <label>Trigger Field</label>
    <type>Text</type>
    <length>255</length>
</CustomField>