force-app/main/default/objects/Extole_Event_Config__mdt/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATED</fullName>
            </value>
            <value>
                <fullName>UPDATED</fullName>
            </value>
            <value>
                <fullName>FIELD_EQUALS</fullName>
            </value>
            <value>
                <fullName>FIELD_CHANGES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>