force-app/main/default/objects/Extole_Event_Config__mdt/fields/Trigger_Value__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Value__c</fullName>
    <label>Trigger Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>